trying to fix background not showing in io

--- a/portfolio/css/style.scss
+++ b/portfolio/css/style.scss
@@ -14,7 +14,7 @@ $blueblack: hsl(200, 10%, 20%);
 html, body {
     max-width: 100vw;
     overflow-x: hidden;
-    background-color: $white;
+    // background-color: $white;
     padding: 0;
     margin: 0;
 }
